<resources>
    <string name="app_name">InventoryApp</string>
    <string name="text_product_prod_name">"Name"</string>
    <string name="text_product_prod_qty">"Quantity"</string>
    <string name="text_product_prod_price">"Price"</string>
    <string name="text_product_prod_email">"Email"</string>
    <string name="text_product_prod_image">"image"</string>

    <!-- Label for overview category of attributes in the product editor [CHAR LIMIT=30] -->
    <string name="product_label">Product</string>

    <!-- Label for the product's qty if the price is unknown [CHAR LIMIT=20] -->
    <string name="unknown_price">Unknown price</string>

    <!-- Label for supplier's contact -->
    <string name="editor_order_to_supplier">Order more</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>
    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>
    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="sale_quantity_no_match">Quantity must stay over 0</string>

    
    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>
    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>
    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>
    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_quantity_no_match">Please enter a positive quantity</string>

    <!-- Title text for the empty view -->
    <string name="empty_view_title_text">No man\'s land here </string>
    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product with name, quantity and price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>
    <!-- Text hint for qty field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_qty">Quantity</string>
    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>
    <!-- Text hint for email field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_email">Email</string>
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_image">Image</string>

    
    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="product_activity_title_new_product">Add a Product</string>
    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="product_activity_title_edit_product">Edit Product</string>

    <!-- Add a product name [CHAR LIMIT=20] -->
    <string name="add_name_to_product">Please, add a Product name</string>
    <!-- Add a product name [CHAR LIMIT=20] -->
    <string name="add_email_to_product">Please, add a Product email</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <string name="sales_item">"Sale"</string>
</resources>
