<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/text_product_name"
        android:layout_width="@dimen/list_name_width"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/list_item_margin_right"
        android:text="@string/text_product_prod_name" />

    <TextView
        android:id="@+id/text_product_quantity"
        android:layout_width="@dimen/list_qty_width"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/list_item_margin_right"
        android:text="@string/text_product_prod_qty" />

    <TextView
        android:id="@+id/text_product_price"
        android:layout_width="@dimen/list_price_width"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/list_item_margin_right"
        android:text="@string/text_product_prod_price" />

    <TextView
        android:id="@+id/text_product_email"
        android:layout_width="@dimen/list_email_width"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/list_item_margin_right"
        android:text="@string/text_product_prod_email"
        android:visibility="gone" />


    <!-- image field
    <TextView
        android:id="@+id/edit_product_image"
        android:scaleType="center"
        style="@style/EditorImagedStyle" />
        -->

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_item" />

</LinearLayout>